# aim-cpp-template

./: .gitignore  CMakeLists.txt  README.md
scripts/: gcovr.cfg  run.sh  test.sh
src/: SourceFiles.cmake  dummy.hpp  main.cpp
tests/: CMakeLists.txt  TestFiles.cmake  sampleTest.cpp
